--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 
 <h1> Ma première page GitHub</h1>
 <p>Nous sommes le mardi, 22 Avril 2018</p>
+<p> <a href="arc-en-ciel.html" Link vers un joli phénomène </a> </p>
