update format page HTML

--- a/arc-en-ciel.html
+++ b/arc-en-ciel.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title></title>
+<link href="style.css" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script>
+</script>
+</head>
+<body>
 <p>L'arc-en-ciel est vsible uniquement lorsque l'observateur a le soleil dans le dos. 
 C'est pour cela qu'il est possible de voir l'arc-en-ciel seulement le soir ou le matin.</p>
 <img src="https://fr.cdn.v5.futura-sciences.com/buildsv6/images/mediumoriginal/2/d/9/2d98af3fe6_87389_665-arcenciel.jpg"/>
+</body>
+</html>
